--- a/backgroundinformation.html
+++ b/backgroundinformation.html
@@ -74,14 +74,14 @@
                 Pyruvate dehydrogenase complex deficiency (PDCD) is a rare metabolic disease which affects carbohydrate metabolism and energy production. It is caused by defects in one of the enzymes in the pyruvate dehydrogenase complex (PDC) (Pirot et al. 2016). It is an extremely heterogeneous condition with the age of onset and severity of symptoms varying widely between individuals. Individuals which experience onset of symptoms prenatally or during infancy often die in early childhood. Others who develop disease symptoms later in childhood often have neurological symptoms of varying severity but usually survive into adulthood (Brown et al. 1994). The most common symptom is a build-up of lactic acid in the blood which can lead to nausea, vomiting, breathing problems and abnormal heartbeat. Neurological problems such as motor delays, poor muscle tone, seizures and abnormal brain structure, are also common (Pavlu-Pereira et al. 2020).
             </p>
             <br>
-            <img src="images/biochem-img-1.png">
+            <img class="biochem-img" src="images/biochem-img-1.png">
             <figcaption>Figure 1: Role of the PDH complex in converting pyruvate to acetyl-CoA (Brown et al. 1994).</figcaption>
             <br>
             <p>
                 ​The pyruvate dehydrogenase complex catalyses the conversion of pyruvate, derived mainly from carbohydrates, to acetyl-CoA. This is a key regulatory step in the generation of energy from glucose. The complex contains three catalytic enzymes (E1, E2 and E3), regulatory enzymes and a binding protein. The regulatory enzymes are kinases and phosphatases which act to control the activity of the complex by phosphorylation and dephosphorylation (Pavlu-Pereira et al. 2020). We will investigate the protein-protein interactions of these regulatory enzymes using mathematical network methods. The complex also requires a number of cofactors, including thiamine pyrophosphate, lipoic acid and flavin adenine dinucleotide (Pirot et al. 2016). The E1 enzyme, known as pyruvate dehydrogenase, is composed of an alpha and beta subunit. PDCD is most commonly caused by mutations in the gene PDHA1 which encodes the E1-alpha subunit and is located on the X-chromosome (Pavlu-Periera).
             </p>
             <br>
-            <img src="images/biochem-img-2.jpeg">
+            <img class="biochem-img" src="images/biochem-img-2.jpeg">
             <figcaption>Figure 2: Kinases and phosphatases regulate PDH activity by phosphorylation and dephosphorylation (Sardhara 2021).</figcaption>
             <br>
             <p>
@@ -102,7 +102,7 @@
                 Lipoic acid is an essential cofactor for many of the complexes involved in metabolism, including PDH. The lipoic acid metabolism pathways vary between yeast and humans. Both yeast and humans are able to synthesise lipoic acid de novo while only humans have a salvage pathway to use exogenous lipoic acid (Storm & Muller 2012).
             </p>
             <br>
-            <img src="images/biochem-img-3.png">
+            <img class="biochem-img" src="images/biochem-img-3.png">
             <figcaption>Figure 3: Lipoic acid metabolism pathways vary between different organisms (Storm & Muller 2012).</figcaption>
         </div>
     </div>
