--- a/interdisciplinarywork.html
+++ b/interdisciplinarywork.html
@@ -79,7 +79,7 @@
             Through running further mathematical analysis, a close community of proteins was identified which interacted directly with the E2 subunit of the PDH complex. The biochemistry students investigated this community and found the proteins to be involved in metabolism of lipoic acid which ultimately acts as a cofactor for the PDH complex. We decided that this could be an interesting area of investigation with limited previous research. This allowed our group to narrow down the topic of investigation and specifically focus on the cause of pyruvate dehydrogenase complex deficiency and the role of lipoic acid in possible treatment strategies.
         </p>
         <br>
-        <img src="images/common-proteins.png">
+        <img class="maths-img" src="images/common-proteins.png">
         <figcaption><em>Common Proteins</em></figcaption>
         <br>
         <p>
